--- a/debian/changelog
+++ b/debian/changelog
@@ -4,14 +4,14 @@ xscreensaver (5.08-1) UNRELEASED; urgency=low
   * New Upstream Version
 
   [ Tormod Volden ]
+  * ship the new "photopile" hack
   * drop 12_hacks_Makefile.in-typo.patch (applied upstream)
   * drop two unused patches (52_ and 60_)
   * fix location of Norwegian Bokmål locale (no -> nb)
-  * do not ship these hacks (removed upstream):
+  * do not ship these hacks any longer (removed upstream):
       bubbles, critical, flag, forest, glforestfire, lmorph, laser,
       lightning, lisa, lissie, rotor, sphere, spiral, t3d, vines,
       whirlygig, worm, mismunch
-  * ship the new "photopile" hack
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 13 Jun 2009 00:23:53 +0200
 
