--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ xscreensaver (5.08-1) UNRELEASED; urgency=low
   * update to standards version 3.8.1 and debhelper compat 7
   * fix typo in package description (Closes: #504424)
   * add missing hacks to package description (Closes: #481749)
+  * debian/control: Breaks gnome-screensaver < 2.26 since we are
+    using full paths in the desktop files
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 13 Jun 2009 00:23:53 +0200
 
