--- a/debian/changelog
+++ b/debian/changelog
@@ -25,8 +25,10 @@ xscreensaver (5.08-1) UNRELEASED; urgency=low
     20_hacks_man_section.patch and 20_hacks_maze_xpm_libs.patch
   * debian/patches/20_skip_install-pam.patch:
     do not run install-pam since we use dh_installpam
+  * 11_upstream_phosphor_segfault_win_size.patch:
+    phospor hack segfaults on window resize (Closes: #505379)
 
- -- Tormod Volden <debian.tormod@gmail.com>  Sat, 13 Jun 2009 00:23:53 +0200
+ -- Tormod Volden <debian.tormod@gmail.com>  Mon, 29 Jun 2009 23:59:50 +0200
 
 xscreensaver (5.07-1) unstable; urgency=low
 
