--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
 xscreensaver (5.08-1) UNRELEASED; urgency=low
 
-  [ Jose Luis Rivas ]
-  * New Upstream Version
-  * debian/copyright: major update
-
   [ Tormod Volden ]
   * ship the new "photopile" hack
   * drop 12_hacks_Makefile.in-typo.patch (applied upstream)
@@ -30,6 +26,12 @@ xscreensaver (5.08-1) UNRELEASED; urgency=low
 
   [ James Vega ]
   * debian/rules: fix sequential build invokations
+
+  [ Jose Luis Rivas ]
+  * New Upstream Version
+  * debian/copyright: major update (not 100% yet)
+  * Moved jigsaw from xscreensaver-data-extra.files to 
+  xscreensaver-gl-extra.files since now is a glx hack.
 
  -- Tormod Volden <debian.tormod@gmail.com>  Mon, 29 Jun 2009 23:59:50 +0200
 
