--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xscreensaver (5.08-1) UNRELEASED; urgency=low
+xscreensaver (5.08-1~pre2) unstable; urgency=low
 
   [ Tormod Volden ]
   * ship the new "photopile" hack
@@ -34,8 +34,10 @@ xscreensaver (5.08-1) UNRELEASED; urgency=low
   xscreensaver-gl-extra.files since now is a glx hack.
   * Screensavers that uses images now rotates according to EXIF data 
   since this new upstream version (Closes: #314553).
+  * Reinstated flurry on xscreensaver-gl-extra since crashes were not
+  reproducible (Closes: #495633)
 
- -- Tormod Volden <debian.tormod@gmail.com>  Mon, 29 Jun 2009 23:59:50 +0200
+ -- Jose Luis Rivas <ghostbar38@gmail.com>  Tue, 14 Jul 2009 14:50:09 -0430
 
 xscreensaver (5.07-1) unstable; urgency=low
 
