--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ xscreensaver (5.08-1~pre2) unstable; urgency=low
     do not run install-pam since we use dh_installpam
   * 11_upstream_phosphor_segfault_win_size.patch:
     phospor hack segfaults on window resize (Closes: #505379)
+  * debian/split-hacks.{sh,config}: configure which hacks go
+    in which packages instead of manually editing *.files
+    (Closes: #539937)
 
   [ James Vega ]
   * debian/rules: fix sequential build invokations
