--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ xscreensaver (5.08-1~pre2) unstable; urgency=low
     (Closes: #539937)
   * 70_upstream_fix_local_screenlock_bypass.patch:
     fix security issue, patch by David Fries (Closes: #539699)
+  * refresh 50_driver_screensaver-properties-desktop.patch so that
+    we do not change the .desktop file Category (Closes: #544837)
 
   [ James Vega ]
   * debian/rules: fix sequential build invokations
