--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,6 @@ xscreensaver (5.09-1) UNRELEASED; urgency=low
   * New Upstream Version
     - Fixed intermittent failure in xscreensaver-command
     - Fixed another potential RANDR crash
-    - New hacks, rubikblocks surfaces
-    - Merged juggle and juggler3d hacks
   * Drop patches applied upstream:
     - 11_upstream_phosphor_segfault_win_size.patch
     - 63_upstream_blinkbox-man.patch
@@ -14,7 +12,8 @@ xscreensaver (5.09-1) UNRELEASED; urgency=low
     - 67_upstream_metaballs-man.patch
     - 70_upstream_fix_local_screenlock_bypass.patch
   * debian/rules: Add workaround for missing autoconf 2.64 support
-  * debian/split-hacks.config: Do not ship juggle since it is gone
+  * Do not ship juggle any longer (merged with juggler3d)
+  * Ship new hacks: rubikblocks and surfaces
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 06 Sep 2009 20:03:27 +0200
 
