--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ xscreensaver (5.09-1) UNRELEASED; urgency=low
 
   * New Upstream Version
     - Fixed intermittent failure in xscreensaver-command
+      Thanks to contribution by James Vega (Closes: 486603)
     - Fixed another potential RANDR crash
   * Drop patches applied upstream:
     - 11_upstream_phosphor_segfault_win_size.patch
