--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ xscreensaver (5.09-1) UNRELEASED; urgency=low
   * debian/rules: Add workaround for missing autoconf 2.64 support
   * Do not ship juggle any longer (merged with juggler3d)
   * Ship new hacks: rubikblocks and surfaces
+  * 80_Makefile_in-clean-fix.patch: Workaround for make distclean
+    failure in some situations, probably autoconf 2.64 issue
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 06 Sep 2009 20:03:27 +0200
 
