--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-xscreensaver (5.10-1) UNRELEASED; urgency=low
+xscreensaver (5.10-1) unstable; urgency=low
 
+  [ Tormod Volden ]
   [Tormod Volden]
   * New Upstream Version
   * Drop patch applied upstream:
@@ -11,8 +12,12 @@ xscreensaver (5.10-1) UNRELEASED; urgency=low
   [ Jose Luis Rivas]
   * Updated Standards-Version to 3.8.3 wo/ any changes needed.
   * Created debian/README.source.
+  * Added patch 20_hack_flurry_man_name for NAME section of manpage for flurry
+    hack.
+  * Changed my email from ghostbar38@gmail.com to ghostbar@debian.org on 
+    Maintainer field.
 
- -- Tormod Volden <debian.tormod@gmail.com>  Tue, 08 Sep 2009 23:35:02 +0200
+ -- Jose Luis Rivas <ghostbar@debian.org>  Wed, 23 Sep 2009 20:47:27 -0430
 
 xscreensaver (5.09-1) UNRELEASED; urgency=low
 
