now it's really dch -r

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ xscreensaver (5.10-2) unstable; urgency=low
   * Added README.hacking to debian/xscreensaver.docs (Closes: #544352).
   * Included a hook for Xsession thanks to Y Giridhar Appaji Nag 
   <debian@appaji.net> (Closes: #357297).
+  * Fixed the changelog.
 
- -- Jose Luis Rivas <ghostbar@debian.org>  Fri, 25 Sep 2009 16:32:36 -0430
+ -- Jose Luis Rivas <ghostbar@debian.org>  Fri, 25 Sep 2009 16:52:44 -0430
 
 xscreensaver (5.10-1) unstable; urgency=low
 
