add .desktop file for the daemon to /etc/xdg/autostart
This will launch the xscreensaver-daemon in standard-compliant
desktop environments. Usually they have tools where users can
choose what to start and not (e.g. gnome-session-properties).

Otherwise they can disable it with:
echo "Hidden=true" > ~/.config/autostart/xscreensaver-daemon.desktop

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ xscreensaver (5.10-3) UNRELEASED; urgency=low
     package.install files to make one single dh_install{,man} call
     since this is so much more efficent.
   * Remove Xsession hook, could not be disabled (Closes: #550042)
+  * Add desktop file to /etc/xdg/autostart, to disable it see
+    <http://standards.freedesktop.org/autostart-spec/>
+    (Closes: #357297)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 27 Sep 2009 22:29:35 +0200
 
