--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xscreensaver (5.10-5) UNRELEASED; urgency=low
+
+  * Added unicode to app-defaults list" (Closes: #560184)
+
+ -- Joachim Breitner <nomeata@debian.org>  Thu, 10 Dec 2009 21:42:41 +0100
+
 xscreensaver (5.10-4) unstable; urgency=low
 
   * Removing Xsession hook (Closes: #550201)
