Remove rm -rf package-dirs in debian/rules
This is exactly was dh_prep already did.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ xscreensaver (5.11-1) UNRELEASED; urgency=low
   * debian/screensavers-desktop.stub: Add missing semicolon
     to Categories list (LP: #554856)
   * Bump Standards-Version to 3.8.4 (no changes needed)
+  * debian/rules: Remove superfluous rm in binary-arch target
 
  -- Tormod Volden <debian.tormod@gmail.com>  Fri, 16 Apr 2010 19:32:38 +0200
 
