--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ xscreensaver (5.11-1) UNRELEASED; urgency=low
     to Categories list (LP: #554856)
   * Bump Standards-Version to 3.8.4 (no changes needed)
   * debian/rules: Simplify cleaning
+  * debian/rules: Remove obsolete --with-gnome flag
 
  -- Tormod Volden <debian.tormod@gmail.com>  Fri, 16 Apr 2010 19:32:38 +0200
 
