Ready to release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xscreensaver (5.11-1) UNRELEASED; urgency=low
+xscreensaver (5.11-1) unstable; urgency=low
 
   * New upstream version
     - New versions of photopile, strange
