--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xscreensaver (5.11-2) UNRELEASED; urgency=low
+
+  * xscreensaver.desktop changes:
+    - do not set StartupNotify
+    - do not specify svg icon (LP: #603222)
+  * Fix installation path for xscreensaver-daemon.desktop 
+
+ -- Tormod Volden <debian.tormod@gmail.com>  Sat, 11 Sep 2010 22:44:25 +0200
+
 xscreensaver (5.11-1) unstable; urgency=low
 
   * New upstream version
