Only delete configuration files if we possibly shipped them
otherwise we might delete files which the user explicitly copied
back (having the same contents).

For now we only check if we are upgrading from a version from
before we started deleting those files unconditionally. To be
more careful we could also check that we are not upgrading from
a version _before_ we started shipping those files. That would
cover the corner case of someone having installed their own
files before we started shipping them, and those files matching
exactly ours (which is not so likely).

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ xscreensaver (5.11-2) UNRELEASED; urgency=low
     - do not set StartupNotify
     - do not specify svg icon (LP: #603222)
   * Fix installation path for xscreensaver-daemon.desktop 
+  * debian/xscreensaver.preinst: Check version before
+    deleting obsolete configuration files (Closes: #588288)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 11 Sep 2010 22:44:25 +0200
 
