--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 xscreensaver (5.11-2) UNRELEASED; urgency=low
 
   * xscreensaver.desktop changes:
-    - do not set StartupNotify
-    - do not specify svg icon (LP: #603222)
+    - Do not set StartupNotify.
+    - Do not specify svg icon. Closes: #618723 (LP: #603222)
   * Fix installation path for xscreensaver-daemon.desktop 
   * debian/xscreensaver.preinst: Check version before
     deleting obsolete configuration files (Closes: #588288)
