--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ xscreensaver (5.13-1) UNRELEASED; urgency=low
     - Passwords that contain UTF-8 non-Latin1 chars are now typeable
     - pt_BR translation (thanks Sérgio Cipolla!) (Closes: #586230)
     - Fix memory leak in gltext (LP: #768032)
+  * Build without gdm and libgnome2-dev (Closes: #618165)
+  * Add Suggests on gdm3 because of gdmflexiserver (Closes: #304406)
+  * Remove obsolete gdmflexiserver options
   * xscreensaver.desktop changes:
     - Do not set StartupNotify.
     - Do not specify svg icon. Closes: #618723 (LP: #603222)
