--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xscreensaver (5.13-1) UNRELEASED; urgency=low
+xscreensaver (5.13-1) unstable; urgency=low
 
   * New upstream version 5.13
     - Passwords that contain UTF-8 non-Latin1 chars are now typeable
@@ -16,7 +16,7 @@ xscreensaver (5.13-1) UNRELEASED; urgency=low
     deleting obsolete configuration files (Closes: #588288)
   * Bump Standards-Version to 3.9.1 (no changes needed)
 
- -- Tormod Volden <debian.tormod@gmail.com>  Sat, 11 Sep 2010 22:44:25 +0200
+ -- Tormod Volden <debian.tormod@gmail.com>  Fri, 22 Apr 2011 23:07:13 +0200
 
 xscreensaver (5.11-1) unstable; urgency=low
 
