--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+xscreensaver (5.14-1) UNRELEASED; urgency=low
+
+  * New upstream version 5.14
+    - Fixed crash in Blank Only Mode when DPMS disabled.
+      (Closes: #627382, #627397)
+    - Added ``Quick Power-off in Blank Only Mode'' option.
+    - BSOD GLaDOS. 
+
+ -- Tormod Volden <debian.tormod@gmail.com>  Sun, 22 May 2011 18:31:28 +0200
+
 xscreensaver (5.13-1) unstable; urgency=low
 
   * New upstream version 5.13
