--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ xscreensaver (5.14-1) UNRELEASED; urgency=low
       (Closes: #627382, #627397)
     - Added ``Quick Power-off in Blank Only Mode'' option.
     - BSOD GLaDOS. 
+  * Clean up duplicate build-depends (thanks Jeremy Bicha)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 22 May 2011 18:31:28 +0200
 
