Drop Recommends on xli or xloadimage
This was done already in 4.05-2.1 but it sneaked back in again.

Since 4.08 xscreensaver-getimage does not rely on external viewers,
and uses gdk-pixbuf instead.

Contrary to its comments, vidwhacker uses xscreensaver-getimage and not
any other viewers. webcollage uses xscreensaver-getimage as first priority.

gdk-pixbuf is included in the build-dep libgtk2.0-dev.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ xscreensaver (5.14-1) UNRELEASED; urgency=low
     - Added ``Quick Power-off in Blank Only Mode'' option.
     - BSOD GLaDOS. 
   * Clean up duplicate build-depends (thanks Jeremy Bicha)
+  * Drop xli | xloadimage recommends (we use gdk-pixbuf)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 22 May 2011 18:31:28 +0200
 
