--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ xscreensaver (5.15-1) UNRELEASED; urgency=low
   * New upstream version 5.15
     - New hacks, hilbert, companioncube and tronbit
     - Turned on LC_CTYPE on Linux (LP: #671923)
+  * debian/rules: Add build-arch and build-indep targets
 
   [ Jose Luis Rivas ]
   * postrm: Kill xscreensaver after removal (Closes: #558024)
