--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ xscreensaver (5.15-3) UNRELEASED; urgency=low
   [ Tormod Volden ]
   * Add -s to gdmflexiserver invocation (Closes: #349000)
   * xscreensaver-data depends on libwww-perl (LP: #971140)
+  * Bump Standards-Version to 3.9.3 (no changes needed)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sat, 18 Feb 2012 21:08:00 +0100
 
